--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,25 @@ img {
     background-color: #b94444;
 }
 
+.section-title {
+    color: #121212;
+    font-size: 45px;
+    font-family: var(--ff-inter);
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.section-description {
+    font-size: 18px;
+    color: #707070;
+    font-family: var(--ff-poppins);
+    margin-bottom: 50px;
+}
+
+.text-center {
+    text-align: center;
+}
+
 /* Main header styles */
 .main-header {
     width: 100%;
@@ -78,4 +97,69 @@ img {
     font-size: 18px;
     font-family: var(--ff-poppins);
     margin-bottom: 30px;
+}
+
+/* Donate section */
+.donate-today {
+    margin-top: 130px;
+}
+
+.donate-fixed-taka {
+    display: flex;
+    justify-content: center;
+    gap: 22px;
+}
+
+.donate-amount {
+    width: 135px;
+    height: 123px;
+    padding-inline: 25px;
+    background-color: #FAFAFA;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 60px;
+}
+
+.donate-amount h3 {
+    color: #707070;
+    font-size: 30px;
+    font-weight: 700;
+    font-family: var(--ff-inter);
+}
+
+.donate-amount:hover {
+    background-color: #FFEEEE;
+    outline: 2px solid #FF5959;
+
+}
+
+.donate-amount:hover h3 {
+    color: #FF5959;
+}
+
+.custom-taka {
+    width: 855px;
+    border-bottom: 2px solid #DADADA;
+    margin-inline: auto;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.custom-taka input[type="number"] {
+    border: none;
+    width: 30%;
+    outline: none;
+    margin-bottom: 9.5px;
+}
+
+.custom-taka input[type="number"]::placeholder {
+    text-align: center;
+
+}
+
+.donate-payment-system {
+    display: flex;
+    justify-content: center;
 }
