--- a/styles/style.css
+++ b/styles/style.css
@@ -275,3 +275,29 @@ img {
     color: #fff;
     font-family: var(--ff-poppins);
 }
+
+/* Footer */
+.main-footer {
+    margin-top: 130px;
+    background-color: #0B0D17;
+}
+
+.footer-text {
+    padding-block: 42px;
+}
+
+.footer-text h2 {
+    text-align: center;
+    color: #FF5959;
+    font-family: 'Lobster', cursive;
+    font-size: 36px;
+    margin-bottom: 24px;
+
+}
+
+.footer-text h4 {
+    color: #fff;
+    text-align: center;
+    font-family: var(--ff-poppins);
+    font-size: 14px;
+}
